--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id 'application'
 }
 
-version '1.0.1'
+version '1.0.2'
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -35,8 +35,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation 'com.squareup.retrofit2:converter-jaxb:2.7.0'
 
-    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
-    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 
     implementation 'info.picocli:picocli:4.6.3'
     annotationProcessor 'info.picocli:picocli-codegen:4.6.3'
